// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepNavigation > should disable buttons if loading 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
      data-testid="StepNavigation__back-button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
      data-testid="StepNavigation__send-button"
      disabled=""
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="flex items-center"
        >
          <span
            class="invisible flex items-center space-x-2"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="double-arrow-right"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M1 7.744h9.013V3.832c0-.4.2-.4.5-.2 2.103 1.504 7.31 5.014 8.111 5.616.501.3.501 1.103 0 1.504-.8.602-6.008 4.212-8.11 5.616-.401.2-.501.2-.501-.2v-3.71H1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <span>
              Send
            </span>
          </span>
          <div
            class="absolute left-0 top-0 flex h-full w-full items-center justify-center"
          >
            <div
              class="css-1nn240v"
            />
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should not render back button if on last step 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should not render back to wallet button if not on last step 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg
            id="double-arrow-right"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M1 7.744h9.013V3.832c0-.4.2-.4.5-.2 2.103 1.504 7.31 5.014 8.111 5.616.501.3.501 1.103 0 1.504-.8.602-6.008 4.212-8.11 5.616-.401.2-.501.2-.501-.2v-3.71H1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should not render continue button if on last two steps 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg
            id="double-arrow-right"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M1 7.744h9.013V3.832c0-.4.2-.4.5-.2 2.103 1.504 7.31 5.014 8.111 5.616.501.3.501 1.103 0 1.504-.8.602-6.008 4.212-8.11 5.616-.401.2-.501.2-.501-.2v-3.71H1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should not render continue button if on last two steps 2`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should render back button if not on last step 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg
            id="double-arrow-right"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M1 7.744h9.013V3.832c0-.4.2-.4.5-.2 2.103 1.504 7.31 5.014 8.111 5.616.501.3.501 1.103 0 1.504-.8.602-6.008 4.212-8.11 5.616-.401.2-.501.2-.501-.2v-3.71H1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should render back to wallet button if on last step 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation > should render continue button if not on last two steps 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
      data-testid="StepNavigation__continue-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Continue
      </div>
    </button>
  </div>
</DocumentFragment>
`;
